Fix spacing in sidebar

--- a/ui/runs/static/runs/sidebar.css
+++ b/ui/runs/static/runs/sidebar.css
@@ -58,16 +58,12 @@ p {
     font-size: small;
 }
 
-.card-body {
-    margin-top: -0.5rem;
-}
-
 .table tr:last-child td{
     border:none;
 }
 
 .table {
-    margin-bottom: -0.5rem;
+    margin-bottom: -0.05rem;
 }
 
 #removeBtn {
